apps/prometheus-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  defaultBackend:
    service:
      name: prometheus-grafana
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
