apps/prometheus-grafana/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  defaultBackend:
    service:
      name: kube-prometheus-stack-prometheus
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - prometheus
